--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
 		<title>Prologue by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="./assets/css/base.css">
+		<link rel="stylesheet" href="./assets/css/layout.css">
+		<link rel="stylesheet" href="./assets/css/modeule.css">
+
+
 	</head>
 	<body class="is-preload">
 
@@ -21,8 +25,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Nicki Baldwin</h1>
+							<p>Front-End Developer</p>
 						</div>
 
 					<!-- Nav -->
@@ -60,14 +64,13 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Nicki</strong>, a Front-End Software Developer<br/> with a Passion for Pretty Things.</h2>
+								<p>Having a more artistic background, I'm attempting to break the tech stereotype.<br/>
+								Originally hailing from Portland, Oregon I love all NW things- snowboarding, traveling, live music. </p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Portfolio</a>
 							</footer>
 
 						</div>
@@ -81,23 +84,21 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Having an artistic eye, I am very excited to bring client visions to life.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="mparkersimms.github.io/mvp_devgroup_project_1/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>MVP_Dev Group<br/>
+											Matching Game</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="nickibaldwin.github.io/cookie-stand/" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Salmon-Cookies</h3>
 										</header>
 									</article>
 								</div>
@@ -105,13 +106,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Code301PlaceHolder</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Code301PlaceHolder</h3>
 										</header>
 									</article>
 								</div>
@@ -119,13 +120,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Code401PlaceHolder</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Code401PlaceHolder</h3>
 										</header>
 									</article>
 								</div>
@@ -144,12 +145,8 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Hello, I’m Nicki Baldwin. I spent the past 8 years as a hairstylist- studying art, design and fashion. Prior to beauty school, I studied marketing for my undergraduate degree. Both experiences allowed me to develop my mind and my eye. Now, enter coding bootcamp. I am seeking to utilize my previous experiences around art and design, and apply them to the technical skills I now have. I really look forward to continued growth and development as I grow as a software developer. I'm looking to work amongst a team of collaborative and creative individuals, utilizing everyones individual skillset to create the best viable product. My previous experiences allowed me to develop my customer relations and art/design skills, which I believe will be greatly beneficial in my journey into the tech industry. 
+							</p>
 
 						</div>
 					</section>
@@ -162,10 +159,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Please contact me with any questions or inquiries!</p>
 
 							<form method="post" action="#">
 								<div class="row">
