--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="./images/NAB_LOGO.png" alt="" /></span>
 							<h1 id="title">Nicki Baldwin</h1>
 							<p>Front-End Developer</p>
 						</div>
@@ -61,6 +61,7 @@
 
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
+						<div id="overlay"></div>
 						<div class="container">
 
 							<header>
@@ -143,9 +144,11 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<video width="100%" autoplay muted loop id="myVideo">
+							<source src="./images/production ID_4747643.mp4" type="video/mp4">
+							</video>
 
-							<p>Hello, I’m Nicki Baldwin. I spent the past 8 years as a hairstylist- studying art, design and fashion. Prior to beauty school, I studied marketing for my undergraduate degree. Both experiences allowed me to develop my mind and my eye. Now, enter coding bootcamp. I am seeking to utilize my previous experiences around art and design, and apply them to the technical skills I now have. I really look forward to continued growth and development as I grow as a software developer. I'm looking to work amongst a team of collaborative and creative individuals, utilizing everyones individual skillset to create the best viable product. My previous experiences allowed me to develop my customer relations and art/design skills, which I believe will be greatly beneficial in my journey into the tech industry. 
+							<p>Hello, I’m Nicki Baldwin. I spent the past 8 years as a hairstylist- studying art, design and fashion. Prior to beauty school, I studied marketing in undergrad. Both experiences allowed me to develop my mind and my eye. Now, enter coding bootcamp. I am seeking to utilize my previous experiences around art and design, and apply them to the technical skills I now have. I really look forward to continued growth and development as I grow as a software developer. I'm looking to work amongst a team of collaborative and creative individuals, utilizing everyones individual skillset to create the best viable product. My previous experiences allowed me to develop my customer relations and art/design skills, which I believe will be greatly beneficial in my journey into the tech industry. 
 							</p>
 
 						</div>
